syntax = "proto3";

package tieba.pbPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.pbPage";

message AdParam {
  int32 load_count = 1;
  int32 refresh_count = 2;
  string yoga_lib_version = 3;
  int32 is_req_ad = 4;
}
