syntax = "proto3";

package tieba.pbPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.pbPage";

import "AlaLiveInfo.proto";
import "Anti.proto";
import "BannerList.proto";
import "BusinessAccountInfo.proto";
import "FineBannerPb.proto";
import "ForumRuleStatus.proto";
import "GraffitiRankListInfo.proto";
import "Lbs.proto";
import "ManagerElection.proto";
import "NaGuide.proto";
import "Page.proto";
import "PbHotPost.proto";
import "PbPage/AddPost.proto";
import "PbPage/AppealInfo.proto";
import "PbPage/BusinessPromotInfo.proto";
import "PbPage/FeedExtInfo.proto";
import "PbPage/FloatingIcon.proto";
import "PbPage/ForumHeadlineImgInfo.proto";
import "PbPage/GodCard.proto";
import "PbPage/GuessLikeStruct.proto";
import "PbPage/NewsInfo.proto";
import "PbPage/PbFollowTip.proto";
import "PbPage/PbSortType.proto";
import "PbPage/PostBanner.proto";
import "PbPage/RecommendBook.proto";
import "PbTopAgreePost.proto";
import "Post.proto";
import "Promotion.proto";
import "PsRankListItem.proto";
import "RecomTopicList.proto";
import "RecommendThread.proto";
import "SdkTopicThread.proto";
import "SimpleForum.proto";
import "SimpleUser.proto";
import "ThreadInfo.proto";
import "TwZhiBoAnti.proto";
import "User.proto";

message PbPageResponseData {
  User user = 1;
  SimpleForum forum = 2;
  Page page = 3;
  Anti anti = 4;
  AddPost add_post = 5;
  repeated Post post_list = 6;
  int32 has_floor = 7;
  ThreadInfo thread = 8;
  Lbs location = 9;
  int32 is_new_url = 10;
  repeated PostBanner post_banner = 11;
  BannerList banner_list = 12;
  repeated User user_list = 13;
  int32 server_time = 14;
  NewsInfo news_info = 15;
  repeated RecommendThread recommend_threads = 16;
  repeated FineBannerPb fine_banner = 17;
  TwZhiBoAnti twzhibo_anti = 18;
  SdkTopicThread sdk_topic_thread = 19;
  PbHotPost hot_post_list = 20;
  GraffitiRankListInfo graffiti_rank_list_info = 21;
  AppealInfo appeal_info = 22;
  GodCard god_card = 23;
  repeated PsRankListItem play_rank_list = 24;
  RecommendBook recommend_book = 25;
  AlaLiveInfo ala_info = 26;
  ForumHeadlineImgInfo forum_headline_img_info = 27;
  string asp_shown_info = 28;
  GuessLikeStruct guess_like = 29;
  repeated ThreadInfo feed_thread_list = 30;
  uint32 is_follow_current_channel = 31;
  int32 switch_read_open = 32;
  FeedExtInfo feed_info = 33;
  PbTopAgreePost top_agree_post_list = 34;
  repeated SimpleForum repost_recommend_forum_list = 35;
  repeated SimpleForum from_forum_list = 36;
  int64 thread_freq_num = 37;
  Post first_floor_post = 38;
  SimpleForum display_forum = 39;
  repeated SimpleUser new_agree_user = 40;
  string partial_visible_toast = 41;
  NaGuide na_guide = 42;
  PbFollowTip follow_tip = 43;
  string fold_tip = 44;
  int32 exp_news_today = 45;
  int32 exp_guide_today = 46;
  string multi_forum_text = 47;
  repeated RecomTopicList thread_topic = 48;
  repeated PbSortType pb_sort_info = 49;
  int32 sort_type = 50;
  ManagerElection manager_election = 51;
  repeated ThreadInfo bjh_recommend = 52;
  BusinessPromotInfo business_promot_info = 53;
  Promotion promotion = 54;
  AlaLiveInfo recom_ala_info = 55;
  int32 jumptotab1 = 56;
  string jumptotab2 = 57;
  BusinessAccountInfo business_account_info = 58;
  repeated ThreadInfo recom_thread_info = 59;
  ForumRuleStatus forum_rule = 60;
  int32 show_adsense = 61;
  int32 is_black_white = 62;
  int32 is_official_forum = 63;
  FloatingIcon floating_icon = 64;
  int32 is_purchase = 65;
  int32 pb_notice_type = 66;
  string pb_notice = 67;
  int32 has_fold_comment = 68;
  int64 fold_comment_num = 70;
}
